--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e0d9dd5
-	trimbase = 
+	trim = play_motion_builder_msgs
+	base = 1f5e95a
+	trimbase = e0d9dd5
 	parent = upstream
 	previous = 8da5907
