--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 22b3906
+	base = 034379b
 	trimbase = 
 	parent = release/melodic/play_motion_builder
-	previous = 
+	previous = 22b3906
