--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bc0cbd2
+	base = eb18fa7
 	trimbase = 
 	parent = debian/melodic/play_motion_builder
-	previous = 
+	previous = bc0cbd2
