--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 66709c6
+	base = 84f2058
 	trimbase = 
 	parent = release/melodic/rqt_play_motion_builder
-	previous = 
+	previous = 66709c6
