--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4686b15
+	base = 1bd1275
 	trimbase = 
 	parent = debian/melodic/rqt_play_motion_builder
-	previous = 
+	previous = 4686b15
