--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f5e95a
+	base = 3fb81fe
 	trimbase = 
 	parent = release/melodic/play_motion_builder_msgs
-	previous = 
+	previous = 1f5e95a
