--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2e2bf68
+	base = 9b41bb9
 	trimbase = 
 	parent = debian/melodic/play_motion_builder_msgs
-	previous = 
+	previous = 2e2bf68
