--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dedbd80
+	base = 29b77b2
 	trimbase = 
 	parent = debian/melodic/play_motion_builder
-	previous = 
+	previous = dedbd80
