--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fc0f19f
+	base = 11eb779
 	trimbase = 
 	parent = debian/melodic/rqt_play_motion_builder
-	previous = 
+	previous = fc0f19f
