--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7c61d0
+	base = ce95056
 	trimbase = 
 	parent = debian/melodic/play_motion_builder_msgs
-	previous = 
+	previous = a7c61d0
