--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = play_motion_builder
-	base = d9d80de
-	trimbase = 
+	base = b7ac117
+	trimbase = d9d80de
 	parent = upstream
 	previous = 88d3b66
