--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_play_motion_builder
 	base = 66709c6
-	trimbase = 86beb9c
+	trimbase = 
 	parent = upstream
 	previous = 8da5907
