--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_play_motion_builder
-	base = 11e7d11
-	trimbase = 
+	base = 32006cf
+	trimbase = 11e7d11
 	parent = upstream
 	previous = 88d3b66
