--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = play_motion_builder_msgs
-	base = 1b7c531
-	trimbase = 
+	base = ce9aeed
+	trimbase = 1b7c531
 	parent = upstream
 	previous = 88d3b66
