Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.0": ["davidfernandez", "david.fernandez@pal-robotics.com"], "1.0.1": ["davidfernandez", "david.fernandez@pal-robotics.com"]}
+{"1.0.0": ["davidfernandez", "david.fernandez@pal-robotics.com"], "1.0.1": ["davidfernandez", "david.fernandez@pal-robotics.com"], "1.0.2": ["davidfernandez", "david.fernandez@pal-robotics.com"]}
